solved few gramatical errors and fix scrollbar

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -10,3 +10,6 @@
     background-position: center center;
     background-size: cover;
 }
+body{
+    overflow: hidden !important;
+}
